--- a/NavUp-app/app/src/main/res/layout/activity_main.xml
+++ b/NavUp-app/app/src/main/res/layout/activity_main.xml
@@ -66,18 +66,19 @@
         android:id="@+id/Guest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="64dp"
         android:layout_marginRight="64dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:onClick="login_as_guest"
         android:text="@string/button_guestLogin"
         android:textColor="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Register"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="32dp"
         app:layout_constraintVertical_bias="0.043" />
 
     <EditText
