--- a/NavUp-app/app/src/main/res/menu/activity_navigation_page_drawer.xml
+++ b/NavUp-app/app/src/main/res/menu/activity_navigation_page_drawer.xml
@@ -18,6 +18,11 @@
             android:id="@+id/Login"
             android:icon="@android:drawable/ic_lock_idle_lock"
             android:title="Login" />
+        <item
+            android:id="@+id/Logout"
+            android:icon="@drawable/ic_logout_48dp"
+            android:title="Logout"
+            android:visible="false" />
     </group>
 
 
