Added mock data

--- a/NavUp-app/app/src/main/res/layout/activity_settings_main.xml
+++ b/NavUp-app/app/src/main/res/layout/activity_settings_main.xml
@@ -33,6 +33,7 @@
             android:layout_marginRight="0dp"
             android:background="@android:color/holo_red_dark"
             android:contentDescription="@string/lbl_profile"
+            android:onClick="openProfile"
             app:layout_constraintBottom_toTopOf="@+id/txt_Profile"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -80,6 +81,7 @@
             android:layout_marginRight="0dp"
             android:background="@android:color/holo_red_dark"
             android:contentDescription="@string/lbl_interestpoints"
+            android:onClick="openInterestPoints"
             app:layout_constraintBottom_toTopOf="@+id/txt_InterestPoint"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -123,6 +125,7 @@
             android:layout_marginRight="0dp"
             android:background="@android:color/holo_red_dark"
             android:contentDescription="@string/lbl_locations"
+            android:onClick="openMyLocations"
             app:layout_constraintBottom_toTopOf="@+id/txt_Location"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -167,6 +170,7 @@
             android:layout_marginRight="0dp"
             android:background="@android:color/holo_red_dark"
             android:contentDescription="@string/lbl_notification"
+            android:onClick="openNotifications"
             app:layout_constraintBottom_toTopOf="@+id/txt_Notificiation"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -210,6 +214,7 @@
             android:layout_marginRight="0dp"
             android:background="@android:color/holo_red_dark"
             android:contentDescription="@string/lbl_helpfaq"
+            android:onClick="openHelpFAQ"
             app:layout_constraintBottom_toTopOf="@+id/txt_HelpFAQ"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -254,6 +259,7 @@
             android:layout_marginRight="16dp"
             android:background="@android:color/holo_red_dark"
             android:contentDescription="@string/lbl_logout"
+            android:onClick="go_to_map"
             app:layout_constraintBottom_toTopOf="@+id/txt_Logout"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
