--- a/NavUp-app/app/src/main/res/layout/activity_interest_point.xml
+++ b/NavUp-app/app/src/main/res/layout/activity_interest_point.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InterestPointActivity">
+    tools:context="za.ac.up.cs.www.navup.InterestPointActivity">
 
     <TextView
         android:id="@+id/textView2"
