--- a/NavUp-app/app/src/main/res/layout/activity_notification.xml
+++ b/NavUp-app/app/src/main/res/layout/activity_notification.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="8dp"
     app:layout_constraintTop_toBottomOf="@+id/switch1"
-    tools:context=".NotificationActivity"
+    tools:context="za.ac.up.cs.www.navup.NotificationActivity"
     android:layout_marginTop="16dp">
 
     <TextView
