--- a/NavUp-app/app/src/main/res/layout/activity_upcoming__events.xml
+++ b/NavUp-app/app/src/main/res/layout/activity_upcoming__events.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="za.ac.up.cs.www.navup.HelpFAQActivity">
+    tools:context="com.example.corne.navup.Upcoming_Events">
 
-    <ListView
-        android:id="@+id/lv_HelpFAQ"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar5"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorToolbar"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
+        app:title="Upcoming Events" />
 </android.support.constraint.ConstraintLayout>
