--- a/NavUp-app/app/src/main/res/values/colors.xml
+++ b/NavUp-app/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="NavUP_red">#f7584c</color>
     <color name="NavUP_blue">#69a4d8</color>
+    <color name="colorToolbar">#e44b3c</color>
 </resources>
